--- a/Amaterasu/estilo/style.css
+++ b/Amaterasu/estilo/style.css
@@ -7,10 +7,151 @@
 }
 :root{
     --color1: #131313;
-    --color2: #961a8e;
+    --color2: #5204da;
     --color3: #ededed;
     --color4: #240d4b;
 }
+.padding{
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+}
+body{
+    background: #eef8ff;
+}
+.logo{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+h1{
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+h2{
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+h3{
+    font-size: 1.4rem;
+    font-weight: 800;
+}
+h4{
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+h5{
+    font-size: 1rem;
+    font-weight: 400;
+}
+h6{
+    color: #d8d8d8;
+}
+button{
+    font-size: 0.8rem;
+    font-weight: 700;
+    outline: none;
+    border: none;
+    background-color: #1d1d1d;
+    color: aliceblue;
+    padding: 13px 30px;
+    cursor: pointer;
+    text-transform: uppercase;
+    transition: 0.3s ease;
+    border-radius: 2px;
+}
+button:hover{
+    background-color: #3a3833;
+}
+
+/*--------------------------Navbar------------------------*/
+#bar{
+    padding: 10px;
+}
+.cadastro-btn{
+    border: 1px solid var(--color2);
+    border-radius: 10px;
+}
+.login-btn{
+    background-color: var(--color2);
+    border-radius: 10px;
+}
+.navbar{
+    font-size: 16px; 
+    top:0 ;
+    left: 0;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.navbar-light .navbar-nav .nav-link{
+    padding: 0 20px;
+    color: black;
+    transition: 0.3s ease;
+}
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active{
+    color: var(--color2);
+}
+.nav-item{
+    padding: 0 10px;
+}
+.nav-item i{
+    margin-bottom: 15px;
+   
+}
+.navbar i{
+    font-size: 1.2rem;
+    padding: 0 7px;
+    cursor: pointer;
+    font-weight: 500px;
+    transition: 0.3s ease;
+}
+.navbar i:hover{
+    color: var(--color2);
+}
+#logo{
+    cursor:pointer;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+/*-----------------------------------Mobile Nav-------------------------------------*/
+.navbar-light .navbar-toggler{
+    border: none;
+    outline: none;
+}
+#bar{
+    font-size: 1.5rem;
+    padding: 7px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    color: rgb(17, 17, 17);
+}
+#bar:hover{
+    color: #fff;
+}
+@media only screen and (max-width: 9991px){
+    body > nav > div > button:hover,
+    body > nav > div > button:focus{
+        background-color: var(--color2);
+    }
+    body > nav > div > button:hover #bar,
+    body > nav > div > button:focus #bar{
+        color: #FFF;
+    }
+    #navbarSupportedContent > ul{
+        margin: 1rem;
+        justify-content: flex-end;
+        align-items: flex-end;
+        text-align: right;
+    }
+    #navbarSupportedContent > ul > li:nth-child(n) > a{
+        padding: 10px 20px;
+    } 
+}
+/*--------------------------Navbar------------------------*/
+
 /*--------------------------Página de Login------------------------*/
 .hero{
     height: 100%;
@@ -113,3 +254,189 @@
 
 }
 /*--------------------------Página------------------------*/
+
+/*--------------------------Fixed Banner------------------------*/
+#banner{
+    background-image: url(../img/wallpper2.jpg);
+    width: 100%;
+    height: 60vh;
+    background-size: cover;
+    background-position: top 70px center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+#banner h4{
+    color: #fff;
+}
+#banner h1{
+    color: #fff;
+}
+#banner button{
+    background-color: var(--color2);
+}
+#banner button:hover{
+    background-color: rgb(39, 1, 75);
+}
+/*--------------------------Fixed Banner------------------------*/
+
+/*--------------------------Nossa Filosofia------------------------*/
+.filosofia h2{
+    color: var(--color2);
+}
+/*--------------------------Nossa Filosofia------------------------*/
+
+
+/*--------------------------Footer------------------------*/
+footer{
+    width: 100%;
+    bottom: 0;
+    background: rgb(32, 32, 32);
+    color: #fff;
+    padding: 70px 0 50px;
+    border-top-left-radius: 125px;
+    font-size: 13px;
+    line-height: 20px;
+}
+.row2{
+    width: 85%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.col2{
+    flex-basis: 25%;
+    padding: 10px;
+}
+.col2:nth-child(2), .col:nth-child(3){
+    flex-basis: 15%;
+}
+.col2 h3{
+    width: fit-content;
+    margin-bottom: 40px;
+    position: relative;
+    font-size: 1rem;
+}
+.col2 h4{
+    font-size: 1rem;
+}
+.email-id{
+    width: fit-content;
+    border-bottom: 1px solid #ccc;
+    margin: 20px 0;
+}
+ul li{
+    list-style: none;
+    margin-bottom: 12px;
+}
+ul li a{
+    text-decoration: none;
+    color: #fff;
+}
+form{
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 50px;
+}
+form i{
+    margin-right: 10px;
+}
+form .for{
+    font-size: 18px;
+    margin-left: 10px;
+}
+form input{
+    width: 100%;
+    background: transparent;
+    color: #ccc;
+    border: 0;
+    outline: none;
+}
+form button{
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    outline: none;
+}
+form button .fas{
+    font-size: 16px;
+    color: #ccc;
+}
+.social-icons .fab{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    color: #000;
+    background: #fff;
+    margin-right: 15px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.fa-facebook-f:hover{
+    background: #4267B2;
+    color: #fff;
+}
+.fa-twitter:hover{
+    background: #1DA1F2;
+    color: #fff;
+}
+.fa-whatsapp:hover{
+    background: #25d366;
+    color: #fff;
+}
+.fa-linkedin:hover{
+    background: #0077b5;
+    color: #fff;
+}
+.underline{
+    width: 100%;
+    height: 5px;
+    background: rgba(255, 255, 255, 0.158);
+    border-radius: 3px;
+    position: absolute;
+    top: 25px;
+    left: 0;
+    overflow: hidden;
+}
+.underline span{
+    width: 15px;
+    height: 100%;
+    background: #5204da;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    animation: moving 2s linear infinite;
+}
+@keyframes moving{
+    0%{
+        left: -20px;
+    }
+    100%{
+        left: 100px;
+    }
+}
+.rodape{
+    margin-top: 50px;
+    width: 100%;
+    float: left;
+    background-image: linear-gradient(to right, var(--color2), var(--color4), var(--color1));
+    padding: 25px 0 10px 0;
+}
+.rodape p{
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+}
+/*--------------------------Footer------------------------*/
